Fixed spacing between online ordering buttons. Created FAQ component.

--- a/src/sass/_LandingPage.scss
+++ b/src/sass/_LandingPage.scss
@@ -28,6 +28,6 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .LandingPage {
       height: 600px;
-      padding-top: 100px;
+      padding-top: 60px;
   }
 }
