--- a/src/sass/_OnlineOrdering.scss
+++ b/src/sass/_OnlineOrdering.scss
@@ -94,7 +94,7 @@
           max-width: 300px;
           font-size: 1.25em;
           line-height: 1.25em;
-          margin: 5px;
+          margin: 10px;
           padding: 0px;
           height: 75px;
         }
